# infemeral

./: .gitignore  Dockerfile  README.md  SYSTEM_RUNDOWN.md  TODO.md  general_test_input.py  pyproject.toml  scp_to_runpod.sh  tensor_service.proto  test_input.json
agent/: primer.md
agent/issues/: kv-cache-not-returned-2026-01-16_22-32-31.md  rotary-embedding-dimension-mismatch-2026-01-16_11-42-48.md
agent/plans/: client-overhead-optimization-2026-01-16_17-50-30.md  grpc-server-mvp-2026-01-16_12-17-47.md  kv-cache-multi-turn-phase2-2026-01-16_12-22-46.md
infemeral/: __init__.py  client.py  config.py  crypto.py  model_prep.py  server.py  tensor_service_pb2.py  tensor_service_pb2_grpc.py  tensors.py
scripts/: benchmark_client.py
tests/: __init__.py  conftest.py  test_client.py  test_client_perf.py  test_config.py  test_crypto.py  test_e2e.py  test_grpc_integration.py  test_multi_turn.py  test_server.py  test_tensors.py
